--- a/推荐系统开发实战/USER-CF.ipynb
+++ b/推荐系统开发实战/USER-CF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,9 @@
     "                # 大量使用setdefault来初始化dict\n",
     "                user_sim.setdefault(user_x,{})\n",
     "                for user_y in users_y:\n",
-    "                    user_sim[user_x][user_y] = prefrence[user_x][user_y]/(user_item_count[user_x]*user_item_count[user_y])\n",
+    "                    user_sim[user_x][user_y] = prefrence[user_x][user_y]/math.sqrt((user_item_count[user_x]*user_item_count[user_y]))\n",
     "            json.dump(user_sim,open(file_path,'w'))\n",
-    "        return user_sim\n",
+    "        return user_sim # (u_x,u_y: value)\n",
     "    def recommend(self,user,k=8,n=40):\n",
     "        \"\"\"\n",
     "        根据用户相似度矩阵计算推荐的物品\n",
@@ -98,18 +98,38 @@
     "        \"\"\"\n",
     "        result = {}\n",
     "        exerted = self.train[user].keys()\n",
-    "        for (user_y,sim) in sorted(self.user_similarity_best().items(),key=lambda x:x[1],reverse=True)[:k]:\n",
+    "        for (user_y,sim) in sorted(self.user_similarity_best()[user].items(),key=lambda x:x[1],reverse=True)[:k]:\n",
     "            if user_y in exerted:\n",
     "                continue\n",
-    "            for item,record in self.train[user_y]:\n",
+    "            for item,record in self.train[user_y].items():\n",
     "                result.setdefault(item,0)\n",
     "                result[item] += sim*record\n",
-    "        return sorted(result.items(),key=lambda x:x[1],reverse=True)          "
+    "        return sorted(result.items(),key=lambda x:x[1],reverse=True)[:n]\n",
+    "    \n",
+    "    def precision(self,k=8,n=10):\n",
+    "        \"\"\"\n",
+    "        @params:\n",
+    "            k=8: 相似用户的数量\n",
+    "            n=10: 推荐物品的总数\n",
+    "        return\n",
+    "            precision: 精确度\n",
+    "        \"\"\"\n",
+    "        hit = 0\n",
+    "        total = 0\n",
+    "        for user,items in list(self.test.items())[:10]:\n",
+    "            rank = self.recommend(user,k,n)\n",
+    "            for u,r in rank:\n",
+    "                if u in items.keys():\n",
+    "                    hit += 1\n",
+    "            total += n\n",
+    "        return hit / total\n",
+    "            \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +138,27 @@
      "text": [
       "加载数据...\n",
       "Train-Test-Spliting\n",
-      "计算用户相似度...\n"
+      "用户相似度从文件中进行加载\n",
+      "[('3114', 1.8716690139191705), ('595', 1.7306063931992168), ('588', 1.6837121995761963), ('1', 1.5444884734317776), ('2355', 1.4944802460409934), ('2081', 1.4939663969090482), ('919', 1.4114297632580142), ('1022', 1.304900632086901), ('2687', 1.2590982941676885), ('594', 1.2190239611486573)]\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "用户相似度从文件中进行加载\n",
+      "0.06\n"
      ]
     }
    ],
    "source": [
     "data_file = '../../data/ch5/ml-1m/ratings.dat'\n",
     "cf = UserCFRec(data_file)\n",
-    "print(cf.recommend('1'))"
+    "print(cf.recommend('1',n=10))\n",
+    "print(cf.precision())"
    ]
   },
   {
